   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
      - Reintroduced registration by default of the internal HTTP server 
        connectors in JEE edition.
    - Enhancements
      - 

- 2.3.0 (12/17/2014)
    - Bugs fixed
      - Fixed usage of custom Component with ServerServlet (issue #926).
        Reported by Graham Smith.
      - StatusService didn't copy the contactEmail and homeRef property
        to the internal serialized status object.
      - JacksonRepresentation fields are now thread safe.
        Reported by Tim Peierls.
      - Removed XML serialization using Jackson extension from Android edition as 
        it depends on classes not supported by Android SDK (issue #964).
        Reported by Ralph van Etten.
      - Fixed OutputRepresentation in the GAE edition (issue #954).
        Reported by Edouard Mercier.

    - Enhancements
      - Upgraded Google App Engine API to version 1.9.15.
      - Upgraded Jackson to version 2.4.4.
      - Upgraded Woodstox to version 4.3.0.
      - Upgraded GSon to version 2.3.1.
      - Upgraded Jetty to version 9.2.6.

- 2.3 Release Candidate 2 (12/08/2014)
    - Bugs fixed
      - Restored HTML variant of error status representations returned by default.
        Now handled by the ConverterService via a StatusInfoHtmlConverter in engine.
      - Fixed bug in OData extension when looping through a multi pages collection.
        Reported by Vishnu Perabathini.

    - Deprecations
      - Deprecated org.restlet.Component XML configuration.
        Usage of XML support in Spring extension is recommended instead.
      - Deprecated e4 extension.
        Usage of Guice or Spring extensions is recommended instead.
      - Deprecated JDBC extension. 
        Use a persistence technology such as Mybatis or Hibernate instead.
      - Deprecated JiBX and XStream extensions.
        Use an XML serialization technology such as Jackson instead.