@@ -32,6 +32,7 @@ import org.restlet.data.MediaType;
 import org.restlet.data.Parameter;
 import org.restlet.engine.header.ContentType;
 import org.restlet.engine.header.HeaderUtils;
+import org.restlet.engine.util.StringUtils;
 import org.restlet.ext.html.internal.FormUtils;
 import org.restlet.representation.OutputRepresentation;
 import org.restlet.representation.Representation;
@@ -284,14 +285,7 @@ public class FormDataSet extends OutputRepresentation {
                 outputStream.write(("--" + getMultipartBoundary()).getBytes());
                 HeaderUtils.writeCRLF(outputStream);
 
-                // Write the optional content type header line
-                if (MediaType.TEXT_PLAIN.equals(data.getMediaType())) {
-                    // Write the content disposition header line
-                    String line = "Content-Disposition: form-data; name=\""
-                            + data.getName() + "\"";
-                    outputStream.write(line.getBytes());
-                    HeaderUtils.writeCRLF(outputStream);
-                } else {
+                if (!StringUtils.isNullOrEmpty(data.getFilename())) {
                     // Write the content disposition header line
                     String line = "Content-Disposition: form-data; name=\""
                             + data.getName() + "\"; filename=\""
@@ -303,6 +297,12 @@ public class FormDataSet extends OutputRepresentation {
                     line = "Content-Type: "
                             + ContentType.writeHeader(data
                                     .getValueRepresentation());
+                    outputStream.write(line.getBytes());
+                    HeaderUtils.writeCRLF(outputStream);
+                } else {
+                    // Write the content disposition header line
+                    String line = "Content-Disposition: form-data; name=\""
+                            + data.getName() + "\"";
                     outputStream.write(line.getBytes());
                     HeaderUtils.writeCRLF(outputStream);
                 }
