@@ -7,6 +7,8 @@ Changes log
     - Bugs fixed
       - Reintroduced registration by default of the internal HTTP server 
         connectors in JEE edition.
+       - FormDataSet not properly serializing text/plain files. Issue #1006.
+         Reported by johnjaylward.
     - Enhancements
       - 
 
